@@ -68,8 +68,8 @@ def main():
     module_list = [ ]
     if name == "all":
         modlist_cfg_name = "%s_modules" % modlist
-        modules_list = CC.read_cc_modules(cc.cfg,modlist_cfg_name)
-        if not len(modules_list):
+        module_list = CC.read_cc_modules(cc.cfg,modlist_cfg_name)
+        if not len(module_list):
             err("no modules to run in cloud_config [%s]" % modlist,log)
             sys.exit(0)
     else:
